src/scss/theme-regions/_site-header.scss
// Site Header

////////////////////////////////////////////////////////////////////////////////
// Truss Header
////////////////////////////////////////////////////////////////////////////////

// In order for the sticky header to show at the top of the viewport while
// open on mobile, the Truss header above it needs to collapse.
.sc-trss-ucsc-header-h {
	display: grid;
	grid-template-rows: 1fr;
	transition: grid-template-rows 0.2s ease;
	background-color: var(--wp--preset--color--ucsc-royal-blue);

	.main-nav--is-open & {
		grid-template-rows: 0fr;
	}

	.main-nav--is-open &,
	.main-nav--is-closing & {

		.trss-ucsc-header {
			overflow: hidden;
		}
	}

	.header-region--stuck & {
		grid-template-rows: 1fr;

		.trss-ucsc-header {
			overflow: auto;
		}
	}
}

////////////////////////////////////////////////////////////////////////////////
// Header Region
////////////////////////////////////////////////////////////////////////////////

.header-region {
	position: sticky;
	top: 0;
	z-index: 10;
	width: 100%;
	background-color: var(--wp--preset--color--ucsc-royal-blue);
	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);

	@include media-query($desktop-menu) {
		background-color: var(--wp--preset--color--white);
		overflow: visible;
	}
}

// Add a top scroll margin to scroll targets in other regions so they're not
// behind the sticky nav after being scrolled to.
.content-region *,
.footer-region * {
	scroll-margin-top: calc(var(--site-header-height, 0) + 1rem);
}

////////////////////////////////////////////////////////////////////////////////
// Site Header Template
////////////////////////////////////////////////////////////////////////////////

.site-header {
	position: relative;
}

.site-header__header {
	// Leave room for the main nav menu toggle button.
	> .wp-block-group:first-child {
		padding-right: 60px;

		@include media-query($desktop-menu) {
			padding-right: var(--wp--style--root--padding-right);
		}
	}

	//////////////////////////////////////////////////////////////////////////////
	// Tagline
	//////////////////////////////////////////////////////////////////////////////

	.wp-block-site-tagline {
		font-size: 16px;
		height: 100%;
		display: flex;
		align-items: center;

		@include media-query($desktop-menu) {
			justify-content: end;
		}
	}
}

////////////////////////////////////////////////////////////////////////////////
// Separator between branding and nav content
////////////////////////////////////////////////////////////////////////////////

.site-header__separator {
	margin: 0;
	border-bottom: 2px solid !important;
	height: 0 !important;
}

////////////////////////////////////////////////////////////////////////////////
// Nav content wrapper
////////////////////////////////////////////////////////////////////////////////

.site-header__inner {
	margin: 0;
	padding: 0;

	@include media-query($desktop-menu) {
		padding-right: var(--wp--style--root--padding-right);
		padding-left: var(--wp--style--root--padding-left);
	}
}

////////////////////////////////////////////////////////////////////////////////
// Main navigation mobile toggle
////////////////////////////////////////////////////////////////////////////////

.site-header__navigation-toggle {
	position: absolute;
	top: 13px;
	right: 0.5rem;
	width: 46px;
	height: 46px;
	background-color: transparent;
	border: 0 none;
	cursor: pointer;
	color: var(--wp--preset--color--white);

	span {
		display: block;
		position: absolute;
		height: 0;
		border-top: 2px solid;
		width: 30px;
		left: 8px;
		transform-origin: center center;
		top: 50%;
		transition: 0.25s ease;

		&:nth-child(1) {
			transform: translateY(-12px);
		}

		&:nth-child(3) {
			transform: translateY(12px);
		}

		.main-nav--is-open & {

			&:nth-child(1) {
				transform: rotate(-45deg);
			}

			&:nth-child(2) {
				opacity: 0;
			}

			&:nth-child(3) {
				transform: rotate(45deg);
			}
		}
	}

	&:hover,
	&:focus-visible {
		color: var(--wp--preset--color--ucsc-primary-yellow);
	}

	@include media-query($desktop-menu) {
		display: none;
	}
}

////////////////////////////////////////////////////////////////////////////////
// Main navigation menu
////////////////////////////////////////////////////////////////////////////////

.site-header__navigation {
	// This lets our JS know where the breakpoint between mobile and desktop is.
	--desktop-breakpoint: #{$desktop-menu};

	margin: 0 !important;
	color: var(--wp--preset--color--white);
	background-color: var(--wp--preset--color--ucsc-royal-blue);
	overflow: hidden;
	width: 100%;
	position: absolute;
	height: 0;
	transition: height 0.2s ease;

	// CASE: The mobile nav is open or opening.
	.main-nav--is-open & {
		height: calc(100svh - var(--site-header-height));
	}

	// CASE: The mobile nav's opening animation is complete and it is fully open.
	.main-nav--is-open:not(.main-nav--is-opening) & {
		overflow: auto;
	}

	@include media-query($desktop-menu) {
		height: auto;
		position: static;
		background-color: transparent;
		overflow: visible;
	}

	.menu-item {
		list-style: none;
	}

	a,
	.sub-menu-toggle {
		display: block;
		line-height: 24px;
		font-size: 16px;
		padding: 16px 18px;
		text-decoration: none;
		letter-spacing: 0.02em;
		color: var(--wp--preset--color--white);
		background-color: transparent;
		transition: 0.2s ease;
	}

	a {

		&:hover,
		&:focus-visible {
			background-color: var(--wp--preset--color--white);
			color: var(--wp--preset--color--ucsc-primary-blue);
		}
	}
}

////////////////////////////////////////////////////////////////////////////////
// Site title
////////////////////////////////////////////////////////////////////////////////

.site-header .wp-block-site-title a {
	color: var(--wp--preset--color--white);
	transition: 0.2s ease;

	&:hover,
	&:focus-visible {
		color: var(--wp--preset--color--ucsc-primary-yellow);
	}
}

////////////////////////////////////////////////////////////////////////////////
// Submenu toggle buttons
////////////////////////////////////////////////////////////////////////////////

.site-header__navigation .sub-menu-toggle {
	border: 0 none;
	width: 56px;
	cursor: pointer;
	position: relative;

	&::after {
		content: "";
		display: block;
		box-sizing: border-box;
		position: absolute;
		width: 12px;
		height: 12px;
		border-bottom: 2px solid;
		border-right: 2px solid;
		transform: translate(50%, -50%) rotate(45deg);
		right: 50%;
		top: 50%;
		transition: transform 0.25s ease;
	}

	&:hover,
	&:focus-visible {
		color: var(--wp--preset--color--ucsc-primary-yellow);
	}

	@include media-query($desktop-menu) {
		display: none !important;
	}
}

.site-header__navigation .menu-item--is-active .sub-menu-toggle::after {
	transform: translate(50%, -50%) rotate(-135deg);
}

////////////////////////////////////////////////////////////////////////////////
// Top-level menu
////////////////////////////////////////////////////////////////////////////////

.site-header__navigation .menu {
	margin: 0;
	padding: 0;
	display: flex;
	flex-direction: column;

	@include media-query($desktop-menu) {
		flex-direction: row;
		flex-wrap: wrap;
		max-width: var(--wp--style--global--content-size);
		margin-left: auto;
		margin-right: auto;
	}
}

////////////////////////////////////////////////////////////////////////////////
// Top-level menu items
////////////////////////////////////////////////////////////////////////////////

.site-header__navigation .menu > .menu-item {
	display: flex;
	flex-wrap: wrap;
	background-color: var(--wp--preset--color--ucsc-royal-blue);

	@include media-query($desktop-menu) {
		width: calc(100% / 7);
		background-color: transparent;
		position: relative;
	}
}

////////////////////////////////////////////////////////////////////////////////
// Top-level menu links
////////////////////////////////////////////////////////////////////////////////

.site-header__navigation .menu > .menu-item > a {
	flex: 1;
	font-weight: 600;
	text-transform: uppercase;

	@include media-query($desktop-menu) {
		color: var(--wp--preset--color--ucsc-primary-blue);
		font-size: 16px;
		line-height: 20px;
		padding-top: 12px;
		padding-bottom: 12px;
	}
}

@include media-query($desktop-menu) {

	.site-header__navigation .menu > .menu-item--is-active > a {
		background-color: var(--wp--preset--color--ucsc-royal-blue);
		color: var(--wp--preset--color--white);
	}
}

////////////////////////////////////////////////////////////////////////////////
// Sub-menus
////////////////////////////////////////////////////////////////////////////////

.site-header__navigation .sub-menu {
	display: none;
	overflow: hidden;
	padding: 0;
	background-color: var(--wp--preset--color--ucsc-primary-blue);

	@include media-query($desktop-menu) {
		mix-blend-mode: multiply;
	}

	// Restrict to two levels; no sub-sub-menus
	.sub-menu {
		display: none !important;
	}
}

.site-header__navigation .sub-menu-wrapper {
	display: grid;
	grid-template-rows: 0fr;
	transition: grid-template-rows 0.25s ease;
	width: 100%;

	@include media-query($desktop-menu) {
		position: absolute;
		top: 100%;
		transition-duration: 0.2s;
		z-index: 1;
	}

	.sub-menu {
		display: block;
	}
}

.site-header__navigation .menu-item--is-active .sub-menu-wrapper {
	grid-template-rows: 1fr;
}

